src/objects/Data_Import__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Data Imports</relationshipLabel>
        <relationshipName>Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Data Imports</relationshipLabel>
        <relationshipName>Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MBA_ID__c</fullName>
        <label>MBA Subscription ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Store_Name__c</fullName>
        <label>Store Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Data Imports</relationshipLabel>
        <relationshipName>Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <label>url</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Data Import</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Data Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>